[metadata]
name = pds4_utils
version = attr: src.VERSION
description = A collection of PDS4 utilities
long_description = file: README.md
keywords = PDS, PDS4, archive, data

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    pyyaml
    lxml
    pds4-tools
    importlib; python_version >= "3.0"

