[metadata]
name = pds4_utils
version = 0.3
description = A collection of PDS4 utilities
long_description = file: README.md
long_description_content_type= text/markdown
keywords = PDS, PDS4, archive, data

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    pyyaml
    lxml
    pds4-tools
    python_version >= 3.7

